Syntax Analyzer/Offline 3 (backup july 14)/y.output
Terminals unused in grammar

    CHAR
    DOUBLE
    BITOP
    CONST_CHAR


State 112 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 $@1: ε

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   11 $@2: ε

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   13 parameter_list: parameter_list COMMA type_specifier ID
   14               | parameter_list COMMA type_specifier
   15               | type_specifier ID
   16               | type_specifier

   17 compound_statement: LCURL statements RCURL
   18                   | LCURL RCURL

   19 var_declaration: type_specifier declaration_list SEMICOLON

   20 type_specifier: INT
   21               | FLOAT
   22               | VOID

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | expression_statement

   31 $@3: ε

   32 statement: $@3 compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | ε

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 7 8 10 12 33 34 35 36 37 57 58
    RPAREN (259) 7 8 10 12 33 34 35 36 37 57 58
    LCURL (260) 17 18
    RCURL (261) 17 18
    LTHIRD (262) 24 26 42
    RTHIRD (263) 24 26 42
    SEMICOLON (264) 7 8 19 37 38 39 40
    COMMA (265) 13 14 23 24 65
    INT (266) 20
    FLOAT (267) 21
    CHAR (268)
    DOUBLE (269)
    VOID (270) 22
    IF (271) 34 35
    ELSE (272) 35
    FOR (273) 33
    WHILE (274) 36
    RETURN (275) 38
    PRINTLN (276) 37
    ASSIGNOP (277) 44
    BITOP (278)
    NOT (279) 54
    INCOP (280) 61
    DECOP (281) 62
    ID <Symbol> (282) 7 8 10 12 13 15 23 24 25 26 37 41 42 57
    CONST_INT <Symbol> (283) 24 26 59
    CONST_FLOAT <Symbol> (284) 60
    CONST_CHAR <Symbol> (285)
    ADDOP <Symbol> (286) 50 53
    MULOP <Symbol> (287) 52
    RELOP <Symbol> (288) 48
    LOGICOP <Symbol> (289) 46


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    start (36)
        on left: 1
        on right: 0
    program <Symbol> (37)
        on left: 2 3
        on right: 1 2
    unit <Symbol> (38)
        on left: 4 5 6
        on right: 2 3
    func_declaration <Symbol> (39)
        on left: 7 8
        on right: 5
    func_definition <Symbol> (40)
        on left: 10 12
        on right: 6
    $@1 (41)
        on left: 9
        on right: 10
    $@2 (42)
        on left: 11
        on right: 12
    parameter_list <Symbol> (43)
        on left: 13 14 15 16
        on right: 7 10 13 14
    compound_statement <Symbol> (44)
        on left: 17 18
        on right: 10 12 32
    var_declaration <Symbol> (45)
        on left: 19
        on right: 4 29
    type_specifier <Symbol> (46)
        on left: 20 21 22
        on right: 7 8 10 12 13 14 15 16 19
    declaration_list <Symbol> (47)
        on left: 23 24 25 26
        on right: 19 23 24
    statements <Symbol> (48)
        on left: 27 28
        on right: 17 28
    statement <Symbol> (49)
        on left: 29 30 32 33 34 35 36 37 38
        on right: 27 28 33 34 35 36
    $@3 (50)
        on left: 31
        on right: 32
    expression_statement <Symbol> (51)
        on left: 39 40
        on right: 30 33
    variable <Symbol> (52)
        on left: 41 42
        on right: 44 56 61 62
    expression <Symbol> (53)
        on left: 43 44
        on right: 33 34 35 36 38 40 42 58
    logic_expression <Symbol> (54)
        on left: 45 46
        on right: 43 44 65 66
    rel_expression <Symbol> (55)
        on left: 47 48
        on right: 45 46
    simple_expression <Symbol> (56)
        on left: 49 50
        on right: 47 48 50
    term <Symbol> (57)
        on left: 51 52
        on right: 49 50 52
    unary_expression <Symbol> (58)
        on left: 53 54 55
        on right: 51 52 53 54
    factor <Symbol> (59)
        on left: 56 57 58 59 60 61 62
        on right: 55
    argument_list <Symbol> (60)
        on left: 63 64
        on right: 57
    arguments <Symbol> (61)
        on left: 65 66
        on right: 63 65


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   20 type_specifier: INT •

    $default  reduce using rule 20 (type_specifier)


State 2

   21 type_specifier: FLOAT •

    $default  reduce using rule 21 (type_specifier)


State 3

   22 type_specifier: VOID •

    $default  reduce using rule 22 (type_specifier)


State 4

    0 $accept: start • $end

    $end  shift, and go to state 11


State 5

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit •

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration •

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition •

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier • ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier • ID LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier • ID LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier • ID LPAREN RPAREN $@2 compound_statement
   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end •

    $default  accept


State 12

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID • LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID • LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier ID • LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID • LPAREN RPAREN $@2 compound_statement
   25 declaration_list: ID •
   26                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 14

   19 var_declaration: type_specifier declaration_list • SEMICOLON
   23 declaration_list: declaration_list • COMMA ID
   24                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 17
    COMMA      shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN • parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN • RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN • parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID LPAREN • RPAREN $@2 compound_statement

    RPAREN  shift, and go to state 19
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   26 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   19 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 19 (var_declaration)


State 18

   23 declaration_list: declaration_list COMMA • ID
   24                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 19

    8 func_declaration: type_specifier ID LPAREN RPAREN • SEMICOLON
   12 func_definition: type_specifier ID LPAREN RPAREN • $@2 compound_statement

    SEMICOLON  shift, and go to state 24

    $default  reduce using rule 11 ($@2)

    $@2  go to state 25


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list • RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list • RPAREN $@1 compound_statement
   13 parameter_list: parameter_list • COMMA type_specifier ID
   14               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   15 parameter_list: type_specifier • ID
   16               | type_specifier •

    ID  shift, and go to state 28

    $default  reduce using rule 16 (parameter_list)


State 22

   26 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   23 declaration_list: declaration_list COMMA ID •
   24                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 23 (declaration_list)


State 24

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON •

    $default  reduce using rule 8 (func_declaration)


State 25

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 32


State 26

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN • SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN • $@1 compound_statement

    SEMICOLON  shift, and go to state 33

    $default  reduce using rule 9 ($@1)

    $@1  go to state 34


State 27

   13 parameter_list: parameter_list COMMA • type_specifier ID
   14               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 35


State 28

   15 parameter_list: type_specifier ID •

    $default  reduce using rule 15 (parameter_list)


State 29

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 26 (declaration_list)


State 30

   24 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 36


State 31

   17 compound_statement: LCURL • statements RCURL
   18                   | LCURL • RCURL

    LPAREN       shift, and go to state 37
    RCURL        shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    $default  reduce using rule 31 ($@3)

    var_declaration       go to state 50
    type_specifier        go to state 51
    statements            go to state 52
    statement             go to state 53
    $@3                   go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 32

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement •

    $default  reduce using rule 12 (func_definition)


State 33

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON •

    $default  reduce using rule 7 (func_declaration)


State 34

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 64


State 35

   13 parameter_list: parameter_list COMMA type_specifier • ID
   14               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 65

    $default  reduce using rule 14 (parameter_list)


State 36

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 66


State 37

   58 factor: LPAREN • expression RPAREN

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 67
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 38

   18 compound_statement: LCURL RCURL •

    $default  reduce using rule 18 (compound_statement)


State 39

   39 expression_statement: SEMICOLON •

    $default  reduce using rule 39 (expression_statement)


State 40

   34 statement: IF • LPAREN expression RPAREN statement
   35          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 68


State 41

   33 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 69


State 42

   36 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 70


State 43

   38 statement: RETURN • expression SEMICOLON

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 71
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 44

   37 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 72


State 45

   54 unary_expression: NOT • unary_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 74
    factor            go to state 63


State 46

   41 variable: ID •
   42         | ID • LTHIRD expression RTHIRD
   57 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 75
    LTHIRD  shift, and go to state 76

    $default  reduce using rule 41 (variable)


State 47

   59 factor: CONST_INT •

    $default  reduce using rule 59 (factor)


State 48

   60 factor: CONST_FLOAT •

    $default  reduce using rule 60 (factor)


State 49

   53 unary_expression: ADDOP • unary_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 77
    factor            go to state 63


State 50

   29 statement: var_declaration •

    $default  reduce using rule 29 (statement)


State 51

   19 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 78

    declaration_list  go to state 14


State 52

   17 compound_statement: LCURL statements • RCURL
   28 statements: statements • statement

    LPAREN       shift, and go to state 37
    RCURL        shift, and go to state 79
    SEMICOLON    shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    $default  reduce using rule 31 ($@3)

    var_declaration       go to state 50
    type_specifier        go to state 51
    statement             go to state 80
    $@3                   go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 53

   27 statements: statement •

    $default  reduce using rule 27 (statements)


State 54

   32 statement: $@3 • compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 81


State 55

   30 statement: expression_statement •

    $default  reduce using rule 30 (statement)


State 56

   44 expression: variable • ASSIGNOP logic_expression
   56 factor: variable •
   61       | variable • INCOP
   62       | variable • DECOP

    ASSIGNOP  shift, and go to state 82
    INCOP     shift, and go to state 83
    DECOP     shift, and go to state 84

    $default  reduce using rule 56 (factor)


State 57

   40 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 58

   43 expression: logic_expression •

    $default  reduce using rule 43 (expression)


State 59

   45 logic_expression: rel_expression •
   46                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 86

    $default  reduce using rule 45 (logic_expression)


State 60

   47 rel_expression: simple_expression •
   48               | simple_expression • RELOP simple_expression
   50 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 87
    RELOP  shift, and go to state 88

    $default  reduce using rule 47 (rel_expression)


State 61

   49 simple_expression: term •
   52 term: term • MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 49 (simple_expression)


State 62

   51 term: unary_expression •

    $default  reduce using rule 51 (term)


State 63

   55 unary_expression: factor •

    $default  reduce using rule 55 (unary_expression)


State 64

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement •

    $default  reduce using rule 10 (func_definition)


State 65

   13 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 13 (parameter_list)


State 66

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 24 (declaration_list)


State 67

   58 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 90


State 68

   34 statement: IF LPAREN • expression RPAREN statement
   35          | IF LPAREN • expression RPAREN statement ELSE statement

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 91
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 69

   33 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    expression_statement  go to state 92
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 70

   36 statement: WHILE LPAREN • expression RPAREN statement

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 93
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 71

   38 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 94


State 72

   37 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 95


State 73

   56 factor: variable •
   61       | variable • INCOP
   62       | variable • DECOP

    INCOP  shift, and go to state 83
    DECOP  shift, and go to state 84

    $default  reduce using rule 56 (factor)


State 74

   54 unary_expression: NOT unary_expression •

    $default  reduce using rule 54 (unary_expression)


State 75

   57 factor: ID LPAREN • argument_list RPAREN

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    $default  reduce using rule 64 (argument_list)

    variable           go to state 73
    logic_expression   go to state 96
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    argument_list      go to state 97
    arguments          go to state 98


State 76

   42 variable: ID LTHIRD • expression RTHIRD

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 99
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 77

   53 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 53 (unary_expression)


State 78

   25 declaration_list: ID •
   26                 | ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 79

   17 compound_statement: LCURL statements RCURL •

    $default  reduce using rule 17 (compound_statement)


State 80

   28 statements: statements statement •

    $default  reduce using rule 28 (statements)


State 81

   32 statement: $@3 compound_statement •

    $default  reduce using rule 32 (statement)


State 82

   44 expression: variable ASSIGNOP • logic_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 100
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 83

   61 factor: variable INCOP •

    $default  reduce using rule 61 (factor)


State 84

   62 factor: variable DECOP •

    $default  reduce using rule 62 (factor)


State 85

   40 expression_statement: expression SEMICOLON •

    $default  reduce using rule 40 (expression_statement)


State 86

   46 logic_expression: rel_expression LOGICOP • rel_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 73
    rel_expression     go to state 101
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 87

   50 simple_expression: simple_expression ADDOP • term

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable          go to state 73
    term              go to state 102
    unary_expression  go to state 62
    factor            go to state 63


State 88

   48 rel_expression: simple_expression RELOP • simple_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 73
    simple_expression  go to state 103
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 89

   52 term: term MULOP • unary_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable          go to state 73
    unary_expression  go to state 104
    factor            go to state 63


State 90

   58 factor: LPAREN expression RPAREN •

    $default  reduce using rule 58 (factor)


State 91

   34 statement: IF LPAREN expression • RPAREN statement
   35          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 105


State 92

   33 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    expression_statement  go to state 106
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 93

   36 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 107


State 94

   38 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 38 (statement)


State 95

   37 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 108


State 96

   66 arguments: logic_expression •

    $default  reduce using rule 66 (arguments)


State 97

   57 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 109


State 98

   63 argument_list: arguments •
   65 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 110

    $default  reduce using rule 63 (argument_list)


State 99

   42 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 111


State 100

   44 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 44 (expression)


State 101

   46 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 46 (logic_expression)


State 102

   50 simple_expression: simple_expression ADDOP term •
   52 term: term • MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 50 (simple_expression)


State 103

   48 rel_expression: simple_expression RELOP simple_expression •
   50 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 87

    $default  reduce using rule 48 (rel_expression)


State 104

   52 term: term MULOP unary_expression •

    $default  reduce using rule 52 (term)


State 105

   34 statement: IF LPAREN expression RPAREN • statement
   35          | IF LPAREN expression RPAREN • statement ELSE statement

    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    $default  reduce using rule 31 ($@3)

    var_declaration       go to state 50
    type_specifier        go to state 51
    statement             go to state 112
    $@3                   go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 106

   33 statement: FOR LPAREN expression_statement expression_statement • expression RPAREN statement

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 56
    expression         go to state 113
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 107

   36 statement: WHILE LPAREN expression RPAREN • statement

    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    $default  reduce using rule 31 ($@3)

    var_declaration       go to state 50
    type_specifier        go to state 51
    statement             go to state 114
    $@3                   go to state 54
    expression_statement  go to state 55
    variable              go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63


State 108

   37 statement: PRINTLN LPAREN ID RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 115


State 109

   57 factor: ID LPAREN argument_list RPAREN •

    $default  reduce using rule 57 (factor)


State 110

   65 arguments: arguments COMMA • logic_expression

    LPAREN       shift, and go to state 37
    NOT          shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    ADDOP        shift, and go to state 49

    variable           go to state 73
    logic_expression   go to state 116
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63


State 111

   42 variable: ID LTHIRD expression RTHIRD •

    $default  reduce using rule 42 (variable)


State 112

   34 statement: IF LPAREN expression RPAREN statement •
   35          | IF LPAREN expression RPAREN statement • ELSE statement

    ELSE  shift, and go to state 117

    ELSE      [reduce using rule 34 (statement)]
    $default  reduce using rule 34 (statement)

    shift/reduce conflict on token ELSE:
       34 statement: IF LPAREN expression RPAREN statement •
       35 statement: IF LPAREN expression RPAREN statement • ELSE statement
      Example: IF LPAREN expression RPAREN IF LPAREN expression RPAREN statement • ELSE statement
      Shift derivation
        statement
        ↳ 34: IF LPAREN expression RPAREN statement
                                          ↳ 35: IF LPAREN expression RPAREN statement • ELSE statement
      Reduce derivation
        statement
        ↳ 35: IF LPAREN expression RPAREN statement                                     ELSE statement
                                          ↳ 34: IF LPAREN expression RPAREN statement •



State 113

   33 statement: FOR LPAREN expression_statement expression_statement expression • RPAREN statement

    RPAREN  shift, and go to state 118


State 114

   36 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 36 (statement)


State 115

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON •

    $default  reduce using rule 37 (statement)


State 116

   65 arguments: arguments COMMA logic_expression •

    $default  reduce using rule 65 (arguments)


State 117

   35 statement: IF LPAREN expression RPAREN statement ELSE • statement
